--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ a {
 	position: fixed;
 	height: 100%;
 	width: 300px;
-	background-color:rgba(255, 169, 160, 0.911); 
+	background-color:rgba(255, 169, 160, 0.986); 
 	padding-top: 40px;
 }
 
@@ -46,6 +46,7 @@ a {
 	margin-left: auto;
 	margin-right: auto;
 	width: 200px;
+	font-family: 'Roboto', sans-serif;
 }
 
 .logo-doceria {
@@ -90,4 +91,31 @@ div main section {
 
 .sessao-bemvindo-content {
 	padding-left: 50px;
+}
+
+#sessao-bemvindo .banner {
+	height: 500px;
+	background-image: url('../img/banner2.jpg');
+	background-position: center;
+	background-size: cover;
+}
+
+#sessao-bemvindo h1 {
+	margin-top: 50px;
+}
+
+#sessao-bemvindo::after, #sessao-sobre::after {
+	content: "";
+	display: block;
+	clear: both;
+	margin-bottom: 100px;
+}
+
+.sessao-minibanner {
+	width: 300px;
+	height: 400px;
+	background-image: url('../img/banner3.jpg');
+	background-position: center;
+	background-size: cover;
+	float: left;
 }
