--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 /* geral */
 
 html {
-	font-family: 'Open sans', 'sans-serif';
 	color: #373A3C;
+	font-family: 'Open Sans', sans-serif;
 }
+
 
 a {
 	transition: .5s;
@@ -109,7 +110,7 @@ div main section {
 	content: "";
 	display: block;
 	clear: both;
-	margin-bottom: 100px;
+	margin-bottom: 50px;
 }
 
 .sessao-minibanner {
@@ -165,3 +166,133 @@ div main section {
 	left: 25px;
 	width: calc(100% - 400px);
 }
+
+/* galerias */
+
+.banner-galeria {
+	background-position: center;
+	background-size: cover;
+	display: inline-block;
+	height: 200px;
+}
+
+#sessao-doces1, #sessao-doces2, #sessao-doces3 {
+	padding-right: 50px;
+	margin-bottom: 50px;
+}
+
+.doces1-imgs {
+	width: 18.8%;
+	margin-left: .5%;
+	margin-right: .5%;
+}
+
+#img1 {
+	background-image: url('../img/galeria1.jpg');
+	margin-left: 0;
+}
+
+#img2 {
+	background-image: url('../img/galeria2.jpg');
+	
+}
+
+#img3 {
+	background-image: url('../img/galeria3.jpg');
+	
+}
+
+#img4 {
+	background-image: url('../img/galeria4.jpg');
+	
+}
+
+#img5 {
+	background-image: url('../img/galeria5.jpg');
+	margin-right: 0;
+}
+
+.doces2-imgs {
+	width: 32.3%;
+	margin-left: .5%;
+	margin-right: .5%;
+}
+
+#img6 {
+	background-image: url('../img/galeria6.jpg');
+	margin-left: 0;
+}
+
+#img7 {
+	background-image: url('../img/galeria7.jpg');
+	
+}
+
+#img8 {
+	background-image: url('../img/galeria8.jpg');
+	margin-right: 0;
+}
+
+.doces3-imgs {
+	width: 23.9%;
+	margin-left: .5%;
+	margin-right: .5%;
+}
+
+#img9 {
+	background-image: url('../img/galeria9.jpg');
+	margin-left: 0;
+}
+
+#img10 {
+	background-image: url('../img/galeria10.jpg');
+	
+}
+
+#img11 {
+	background-image: url('../img/galeria11.jpg');
+	
+}
+
+#img12 {
+	background-image: url('../img/galeria12.jpg');
+	margin-right: 0;
+}
+
+/* contato */
+
+#form-contato {
+	width: 500px;
+}
+
+#form-contato input[type=text], #form-contato input[type=email], #form-contato textarea {
+	display: block;
+	border: 1px solid #563621;
+	padding: 10px;
+	margin-bottom: 20px;
+	width: 100%;
+	font-size: 16px;
+	font-family: 'Open Sans', sans-serif;
+
+}
+
+#form-contato input[type=text]:focus, #form-contato input[type=email]:focus, #form-contato textarea:focus {
+	outline-color: rgba(255, 169, 160, 0.986);
+	
+}
+
+#form-contato textarea {
+	height: 150px;
+}
+
+#form-contato ::placeholder {
+	color: rgba(255, 169, 160, 0.986);
+}
+
+#form-contato input[type=submit] {
+	margin-left: 0;
+	font-size: 16px;
+	width: 180px;
+	margin-bottom: 50px;
+}
+
